--- a/style.css
+++ b/style.css
@@ -271,4 +271,27 @@ form textarea {
     width: auto; /* aseguramos que no se estire */
     min-width: unset;
   }
+
+  .modal-content {
+    max-width: 90%;
+    padding: 1rem;
+    font-size: 0.9rem;
+  }
+
+  .modal-content img {
+    max-height: 200px;
+    object-fit: cover;
+  }
+
+  .modal-content h2 {
+    font-size: 1.5rem;
+  }
+
+  .modal-content h3 {
+    font-size: 1rem;
+  }
+
+  .modal-content p {
+    font-size: 0.95rem;
+  }
 }
